# MUZOWNIK_C

./: .gitignore  CMakeLists.txt  opus.txt
src/: geometry_def.h  geometry_def_codes.h  library.c  library.h  main.c
src/OPUS_EDIT_LOGIC/: opus_edit_logic.c
src/OPUS_LOADSAVE/: OPUS_loadsave.c
src/STRUCTS_MALLFREE/: structs_mallfree.c
src/WINDOWS/: windows.c
